--- a/CadastroFuncionarios/pom.xml
+++ b/CadastroFuncionarios/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.mycompany.aula1.Aula1</exec.mainClass>
     </properties>
+    <name>cursoJava</name>
 </project>
