--- a/Udemy/Java/secao24_APISpring/workshopmongo/pom.xml
+++ b/Udemy/Java/secao24_APISpring/workshopmongo/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.educandoweb</groupId>
-	<artifactId>course</artifactId>
+	<groupId>com.javacourse</groupId>
+	<artifactId>workshopmongo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>course</name>
+	<name>workshopmongo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>19</java.version>
